--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,11 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.esoxjem.movieguide"
+        applicationId "tz.co.wadau.muvi"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         buildConfigField "String", "TMDB_API_KEY", "\"${getProperty("local.properties", "tmdb_api_key")}\""
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
