--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.esoxjem.movieguide"
+    package="tz.co.wadau.muvi"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".BaseApplication"
+        android:name="tz.co.wadau.muvi.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".listing.MoviesListingActivity"
+            android:name="tz.co.wadau.muvi.listing.MoviesListingActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,12 +21,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".details.MovieDetailsActivity"
-            android:parentActivityName=".listing.MoviesListingActivity"
+            android:name="tz.co.wadau.muvi.details.MovieDetailsActivity"
+            android:parentActivityName="tz.co.wadau.muvi.listing.MoviesListingActivity"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".listing.MoviesListingActivity"/>
+                android:value="tz.co.wadau.muvi.listing.MoviesListingActivity"/>
         </activity>
     </application>
 
